# Quadrotor-Position-Altitude-Control-with-Single-Motor-Failure

Endterm/: README.md
Endterm/files/Controller/: controller.py  controller_with_2.py  indi_utils.py  main.py  quadrotor.py  utils_indi.py
Endterm/files/detection/: detection.sh  plot.sh
Endterm/files/detection/src/detection_classical/: node.py  observer.py  params.py  plot.py  q_to_rpy.py  rpy_rotation.py
Endterm/files/motor_failure_detection/: Kconfig  model.pt
Endterm/setup/: Dockerfile  dds_topics.yaml  setup.md
Endterm/setup/gazebo_motor_failure_plugin/: CMakeLists.txt  gazebo_motor_failure_plugin.cpp
MidTerm/: README.md
MidTerm/files/NMPC_Controller/: controller.py  main.py  quadhello_acados_ocp.json  quadrotor.py
MidTerm/files/detection/: README.md  detection.sh
MidTerm/files/detection/src/detection_classical/: Detection.md  node.py  observer.py  params.py  plot.py  q_to_rpy.py
MidTerm/files/detection/src/detection_ml/: node.py
MidTerm/files/motor_failure_detection/: CMakeLists.txt  motor_failure_detection.cpp
MidTerm/setup/: Dockerfile  setup.md
